--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,9 @@ body {
 .color2:hover {
     color: rgb(242, 76, 76);
 }
+
+img {
+    border: 1px solid white;
+    margin-left: 100px;
+    height: 300px;
+}
