--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,12 @@ body {
 .card-title {
     text-decoration: underline;
 }
+
+.button {
+    height: 75px;
+    width: 200px;
+    margin: 75px;
+    font-size: 40px;
+    border-radius: 10px;
+    border: 2px solid rgb(249, 137, 137);
+}
